fix stretched page bug

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -58,21 +58,6 @@ body {
   width: 100vw;
 }
 
-body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
-
-html {
-  min-height: -webkit-fill-available;
-}
-
-.mobile-screen {
-  min-height: 100vh;
-  min-height: -moz-available;
-  min-height: -webkit-fill-available;
-}
-
 a {
   color: inherit;
   text-decoration: none;
